--- a/Autostart/wpa_supplicant.service
+++ b/Autostart/wpa_supplicant.service
@@ -7,7 +7,7 @@ Wants=network.target
 [Service]
 Type=dbus
 BusName=fi.w1.wpa_supplicant1
-ExecStart=/sbin/wpa_supplicant -u -s -c /etc/wpa_supplicant/wpa_supplicant.conf -i wlan0
+ExecStart=/root/simar-software/Autostart/simar_wireless.sh
 Restart=always
 RestartSec=30
 
