--- a/start/simar_sensors.service
+++ b/start/simar_sensors.service
@@ -7,7 +7,7 @@ After=syslog.target network-online.target
 [Service]
 Type=simple
 ExecStart=/root/simar-software/start/simar_startup.sh
-Restart=on-failure
+Restart=always
 RestartSec=10
 KillMode=control-group
 
