--- a/start/services/simar_sensors.service
+++ b/start/services/simar_sensors.service
@@ -6,7 +6,7 @@ After=syslog.target network-online.target
 
 [Service]
 Type=simple
-ExecStart=/root/simar-software/start/simar_startup.sh
+ExecStart=/root/simar-software/bin/bme
 Restart=always
 RestartSec=10
 KillMode=control-group
