--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -6,9 +6,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: Run clang-format style check.
+    - name: Run clang-format style check
       uses: jidicula/clang-format-action@v4.5.0
       with:
         clang-format-version: '13'
-        check-path: 'src'
-        fallback-style: 'Mozilla'
+        check-path: '.'
+        fallback-style: 'Chromium'
