--- a/.github/workflows/clang-format.yml
+++ b/.github/workflows/clang-format.yml
@@ -2,7 +2,7 @@ name: clang-format check
 on: [push, pull_request]
 jobs:
   formatting-check:
-    name: Formatting Check
+    name: formatting check
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
