--- a/pru/Makefile
+++ b/pru/Makefile
@@ -3,9 +3,9 @@ PRU_CGT = /usr/share/ti/cgt-pru
 
 CC = clpru
 LD = lnkpru
-CFLAGS = --include_path=$(PRU_SWPKG)/include \
-        --include_path=$(PRU_SWPKG)/include/am335x \
-		--include_path=$(PRU_CGT)/include \
+CFLAGS = -i$(PRU_SWPKG)/include \
+        -i$(PRU_SWPKG)/include/am335x \
+		-i$(PRU_CGT)/include \
         -v3 -O4 --opt_for_speed=5 --endian=little \
         --define=am3359 --define=pru1 --hardware_mac=on --verbose
 LDFLAGS = AM335x_PRU.cmd
@@ -35,7 +35,7 @@ $(PRU_SWPKG)/PRU-Package-v6.1-Manifest.html:
 	rm -f pru-software-support-package-6.0.1.tar.gz
 
 $(OUT)/pru1.out: $(ASM_PROGS) $(PROGS)
-	$(LD) $(LDFLAGS) $^ --library=rpmsg_lib.lib -o $@
+	$(LD) $(LDFLAGS) $^ --library=rpmsg_lib.lib -i/usr/share/ti/cgt-pru/lib -o $@
 
 clean:
 	rm -f pru1.out $(ASM_PROGS) $(PROGS)
