--- a/start/services/simar_volt.service
+++ b/start/services/simar_volt.service
@@ -7,7 +7,7 @@ After=syslog.target multi-user.target
 [Service]
 Type=simple
 ExecStart=/root/simar-software/start/simar_volt.sh
-Restart=on-failure
+Restart=always
 RestartSec=10
 KillMode=control-group
 
